fix spotify spacing on waybar

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -159,6 +159,7 @@ tooltip {
 
 #custom-media {
     color: #e0ffe0;
+    margin-left: 0px;
 }
 
 #custom-weather {
